Fixed menu collaps in ipad

--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -146,7 +146,7 @@
   }
 
   &.collapsed {
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 767px) {
       max-height: 0;
     }
   }
